<resources>
    <string name="app_name">AIA</string>
    <string name="map_key">AIzaSyAAFVAIDmaUcQwXhk6z6NaXR8bGGjr3OEg</string>

    <string name="login">Login</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="today">Today</string>
    <string name="completed">Completed</string>
    <string name="history">History</string>
    <string name="total">Total</string>
    <string name="open">Open</string>
    <string name="full_name">Full Name</string>
    <string name="area">Area</string>
    <string name="sub_category">SubCategory</string>
    <string name="category">Category</string>
    <string name="value">Value</string>
    <string name="units">Units</string>
    <string name="date">Date</string>
    <string name="city">City</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="profile_image">profile_image</string>
    <string name="result">result</string>
    <string name="success">success</string>
    <string name="notification_title">Notification Title</string>
    <string name="this_is_message_body_of_the_notification">This is message body of the Notification ...............</string>
    <string name="user_id">user_id</string>
    <string name="fcm_token">fcm_token</string>

    <!--Text Screen Names Starts-->
    <string name="title_activity_landing">LandingActivity</string>
    <string name="my_profile">My Profile</string>
    <string name="notification">Notification</string>
    <string name="action_settings">Settings</string>
    <string name="asset_details">Asset Details</string>
    <!--Text Screen Names Ends-->

    <!--Text on Dialogs Starts-->
    <string name="exit_app">Exit App?</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="submit">Submit</string>
    <string name="error">Error</string>
    <!--Text on Dialogs Ends-->

    <!--Dummy Text Starts-->
    <string name="dummy_user_name">Bynry Technologies</string>
    <string name="dummy_asset_id">123456789</string>
    <string name="dummy_meter_number">987654321</string>
    <string name="dummy_area">Kothrud Depot Pune</string>
    <string name="dummy_complaint_type">Transformer Burnt</string>
    <string name="dummy_asset_name">Transformer</string>
    <string name="dummy_start_date">23/09/2017</string>
    <string name="dummy_assignment_date">25/10/2018</string>
    <string name="dummy_completed_date">28/02/2019</string>
    <string name="dummy_binder">2707</string>
    <string name="dummy_complaint_type2">Meter Burnt</string>
    <string name="dummy_account_no">ABC0005</string>
    <string name="dummy_meter_type">Analog/Digital</string>
    <string name="dummy_inspection_type">Transformer Damage</string>
    <string name="dummy_breakdown_type">BreakDown</string>
    <!--Dummy Text Ends-->

    <!--Text on Cards Starts-->
    <string name="asset_id">Asset Id</string>
    <string name="asset_name">Asset Name</string>
    <string name="make_no">Make Number</string>
    <string name="location">Location</string>
    <!--Text on Cards Ends-->

    <!--Text on AssetDetailsActivity Starts-->
    <string name="checking_parameters">Checking Parameters</string>
    <string name="asset_image">Asset Image</string>
    <string name="reading_parameters">Reading Parameters</string>
    <string name="select_sub_division">Select Sub-Division</string>
    <string name="select_area">Select Area</string>
    <string name="select_location">Select Location</string>
    <string name="address">Address</string>
    <string name="enter_asset_address">Enter Asset Address</string>
    <string name="gps_network_not_enabled">GPS Network not <b>Enabled</b></string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="please_provide_asset_image">Please provide Asset Image</string>
    <!--Text on AssetDetailsActivity Ends-->

    <!--All Errors related messages starts-->
    <string name="api_fail_message">Something went wrong. Please try again later</string>
    <string name="error_internet_not_connected">Please Check Your Internet Connection</string>
    <string name="error_you_have_not_picked_image">You haven\'t picked Image</string>
    <string name="password_should_have_at_least_characters">Password should have at least 6 characters</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_user_id">Please Enter UserId</string>
    <string name="error_checking_parameters">Please Check Asset Parameters</string>
    <string name="error_reading_parameters">Please Enter Reading</string>
    <string name="error_please_contact_server_admin">Your username and phone id does not match, Please contact admin.</string>
    <string name="this_device_is_not_support_gps">This device is not support GPS</string>
    <!--All Errors related messages ends-->

    <!--Search Activity Screen Starts-->
    <string name="no_asset_found">No Asset Found</string>
    <string name="record_found">Record Found</string>
    <string name="records_found">Records Found</string>
    <string name="search_text_criteria">You can search by <b>BP Number, Consumer Name</b> with at least <b>1</b> character</string>
    <!--Search Activity Screen Ends-->

    <!--Empty Screen Messages Starts-->
    <string name="consumer_info_not_assigned_to_you">Consumer info not Assigned to you!</string>
    <string name="reading_not_taken_yet">Reading not taken yet!</string>
    <string name="no_data_available">No data Available!</string>
    <!--Empty Screen Messages Ends-->

    <!--Api related keys Starts-->
    <string name="job_card_id">jc_id</string>
    <string name="sub_division_id">sub_division_id</string>
    <string name="area_id">area_id</string>

    <string name="asset_id_upload">asset_id</string>
    <string name="sub_division_upload">sub_division</string>
    <string name="area_id_upload">area</string>
    <string name="location_id_upload">location</string>
    <string name="make_upload">make</string>
    <string name="make_no_upload">make_no</string>
    <string name="address_upload">address</string>
    <string name="latitude_upload">latitude</string>
    <string name="longitude_upload">longitude</string>
    <string name="file">file</string>
    <!--Api related keys Ends-->

</resources>
