<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_h3">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="3dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="@dimen/margin_h3"
        android:layout_centerInParent="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_h2"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asset_name"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h2" />

                    <TextView
                        android:id="@+id/txt_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_asset_id"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_h2"
                    android:background="@color/color1"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h2" />

                    <TextView
                        android:id="@+id/txt_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_asset_name"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/margin_h2"
                android:paddingRight="@dimen/margin_h2"
                android:weightSum="2">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_h1"
                    android:layout_weight="1"
                    android:background="@color/color1"
                    android:layerType="software" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_h2"
                    android:layout_weight="1"
                    android:background="@color/color1"
                    android:layerType="software" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_h2"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_third"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/make_no"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h2" />

                    <TextView
                        android:id="@+id/txt_third"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_asset_id"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_h2"
                    android:background="@color/color1"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_fourth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h2" />

                    <TextView
                        android:id="@+id/txt_fourth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_area"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>