<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_h3">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="3dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="@dimen/margin_h3"
        android:layout_centerInParent="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_h2"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h2" />

                    <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_start_date"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_h2"
                    android:background="@color/colorAccent"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_assigned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h2" />

                    <TextView
                        android:id="@+id/txt_assigned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_meter_number"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_h2"
                    android:background="@color/colorAccent"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_completed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h2" />

                    <TextView
                        android:id="@+id/txt_completed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_meter_number"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>