<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/light_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/procure_to_pay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_border_white"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_action_email"
                android:drawablePadding="5dp"
                android:hint="@string/id"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/text_size_h5"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorWhite" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_action_password"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/text_size_h5"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/lbl_invalid_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:text="Invalid username or password. Please try again"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_h4"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="#8e6791"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_h5" />

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>


