<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main.framelayout.title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:orientation="vertical"
    app:layout_collapseMode="parallax"
    app:layout_collapseParallaxMultiplier="0.3"
    tools:showIn="@layout/activity_landing">

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_total"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="@dimen/text_size_h3"
                    android:padding="0dp"
                    android:scaleType="centerInside"
                    android:text="1000"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/ripple_oval_un_selected"/>

                <TextView
                    android:id="@+id/txt_total"
                    android:textSize="@dimen/text_size_h3"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/total"
                    android:layout_marginLeft="1dp"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="1dp"
                android:layout_height="35dp"
                android:layout_marginLeft="0dp"
                android:background="@color/color1"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_open"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_oval_selected"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="@dimen/text_size_h3"
                    android:padding="0dp"
                    android:scaleType="centerInside"
                    android:text="1000"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/txt_open"
                    android:textSize="@dimen/text_size_h3"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/open"
                    android:layout_marginLeft="1dp"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_completed"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_oval_un_selected"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="0dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_h3"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/txt_completed"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/margin_h3"
                    android:textSize="@dimen/text_size_h3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/completed"
                    android:layout_marginLeft="1dp"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="1dp"
                android:layout_height="35dp"
                android:layout_marginLeft="0dp"
                android:background="@color/color1"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_history"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_oval_un_selected"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="0dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_h3"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/txt_history"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/margin_h3"
                    android:textSize="@dimen/text_size_h3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/history"
                    android:layout_marginLeft="1dp"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>